Set footer social links spacing and font size to fix horizonatl scroll on page

--- a/packages/components/src/Surfaces/FooterInternationalContents/index.module.css
+++ b/packages/components/src/Surfaces/FooterInternationalContents/index.module.css
@@ -149,7 +149,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1.875rem;
-  font-size: clamp(0.7625rem, 0.8097883598vw, 0.930625rem);
+  font-size: clamp(0.7625rem, 0.8597883598vw, 1.080625rem);
   padding-top: 3.75rem;
 }
 
@@ -178,17 +178,14 @@
 }
 
 .footer-socials {
-  font-size: clamp(0.7625rem, 0.8097883598vw, 0.930625rem);
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto;
+  font-size: clamp(0.7625rem, 0.8597883598vw, 1.080625rem);
+  display: flex;
+  justify-items: center;
+  align-items: center;
   list-style: none;
   margin: 0;
   padding: 0;
   gap: clamp(0.2rem, 0.5291005291vw, 0.665rem);
-  justify-items: center;
-  align-items: center;
-  display: flex;
 }
 
 @media (min-width: 992px) {
@@ -201,11 +198,6 @@
   display: flex;
   align-items: center;
   gap: inherit;
-}
-
-.footer-socials__item:nth-child(4) {
-  grid-column: 2 / 3;
-  grid-row: 2;
 }
 
 .footer-socials .footer-socials__link {
